Set font styles

--- a/index.html
+++ b/index.html
@@ -4,23 +4,26 @@
     <title>Download Excursion</title>
     <link href="./resources/css/index.css" type="text/css" rel="stylesheet">
   </head>
-  <body>
-    <h1>Discover hidden places in the world around you</h1>
-      <nav id="link">
-        <a href="./index.html">Download Excursion (Coming soon!)</a>
-      </nav>
+    <body>
+      <h1>Discover hidden places in the world around you</h1>
+        <nav id="link">
+          <a href="./index.html">Download Excursion (Coming soon!)</a>
+        </nav>
 
-    <div>
-      <h2>Your personal travel guide</h2>
-      <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-    </div>
+      <div>
+        <h2>Your personal travel guide</h2>
+        <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+      </div>
 
 
-    <div>
-      <h2>Coming Soon for iPhone and Android</h2>
-      <nav id="link">
-        <a href="./index.html">Download Excursion (Coming soon!)</a>
-      </nav>
-    </div>
+      <div>
+        <h2>Coming Soon for iPhone and Android</h2>
+        <nav id="link">
+          <a href="./index.html">Download Excursion (Coming soon!)</a>
+        </nav>
+      </div>
+
+    <footer id="footer">  
+
   </body>
 </html>
