--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Download Excursion</title>
     <link href="./resources/css/index.css" type="text/css" rel="stylesheet">
+    <meta http-equiv="content-type" content="text/html;charset=utf-8" />
   </head>
     <body>
       <h1>Discover hidden places in the world around you</h1>
@@ -23,7 +24,7 @@
         </nav>
       </div>
 
-    <footer id="footer">  
+    <footer id="footer">&#169; Excursion</footer>  
 
   </body>
 </html>
