--- a/index.html
+++ b/index.html
@@ -7,24 +7,28 @@
   </head>
     <body>
       <h1>Discover hidden places in the world around you</h1>
-        <nav id="link">
+        <nav id="#link">
           <a href="./index.html">Download Excursion (Coming soon!)</a>
         </nav>
-
+      <p><video src="resources/videos/excursion.mp4" loop autoplay /></p>
       <div>
         <h2>Your personal travel guide</h2>
         <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+        <p><img src="resources/images/camp.jpg" alt="tent in a camping site"></p>
       </div>
 
 
       <div>
+        <p><img src="resources/images/phone.png"></p>
         <h2>Coming Soon for iPhone and Android</h2>
-        <nav id="link">
+        <nav id="#link">
           <a href="./index.html">Download Excursion (Coming soon!)</a>
         </nav>
       </div>
 
-    <footer id="footer">&#169; Excursion</footer>  
+      <div id="#footer">
+        <footer>&#169; Excursion</footer>
+      </div>
 
   </body>
 </html>
