Double check finished project

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
     <body>
       <h1>Discover hidden places in the world around you</h1>
-        <nav id="#link">
+        <nav>
           <a href="./index.html">Download Excursion (Coming soon!)</a>
         </nav>
       <p><video src="resources/videos/excursion.mp4" loop autoplay /></p>
@@ -21,12 +21,13 @@
       <div>
         <p><img src="resources/images/phone.png"></p>
         <h2>Coming Soon for iPhone and Android</h2>
-        <nav id="#link">
+        <nav>
           <a href="./index.html">Download Excursion (Coming soon!)</a>
         </nav>
       </div>
 
-      <div id="#footer">
+      <div id="footer">
+        <br />
         <footer>&#169; Excursion</footer>
       </div>
 
